# map-signal

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
map_signal/: Other_impl.ipynb  __init__.py  coefficients.py  coefficients_exp.ipynb  ripple.py  timbre.py  timbre2.py
tests/: test_timbre2.py  timbre_test.py
