[tool.poetry]
name = "map-signal"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["Loonan Chauvette <loonan.chauvette@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/LoonanChauvette/map-signal"
repository = "https://github.com/LoonanChauvette/map-signal"
keywords = ["synthesizer", "DSP", "audio"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Natural Language :: English"
]
packages = [{include = "map_signal"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.2"
scipy = ">=1.10"
matplotlib = "^3.4"
jupyter = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
tox = "^3.20.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

